# trace-ops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: config.py  main.py  requirements.txt
backend/agent/: graph.py  guardrails.py  memory.py  prompts.py  tools.py
backend/api/routes/: diagnosis.py  health.py  logs.py
backend/app/: config.py  main.py
backend/app/agent/: graph.py  memory.py  prompts.py  tools.py
backend/app/api/: sse.py
backend/app/ingestion/: noise_filter.py  parser.py
backend/app/models/: action.py  diagnosis.py  log_entry.py
backend/app/storage/: __init__.py  chroma_store.py  database.py
backend/db/: base.py  database.py  startup.py
backend/models/: diagnosis.py  log_entry.py
backend/services/: log_store.py  noise_reducer.py
evals/: run_evals.py
evals/cases/: case_001_pool_exhaustion.json  case_002_cache_penetration.json
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo
scripts/: export_agent_graph.py  seed_logs.py
services/api-gateway/: main.py
services/cache-service/: Dockerfile  main.py
services/inventory_service/: simulator.py
services/load-generator/: Dockerfile  main.py
services/order_service/: simulator.py
services/payment_service/: simulator.py
services/user-service/: main.py
(+39 files in other folders)
