[project]
name = "trace-ops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi==0.115.0",
    "greenlet==3.1.1",
    "httpx==0.27.2",
    "langchain-core==0.3.10",
    "langchain-google-genai>=2.0.1",
    "langgraph==0.2.34",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.2",
    "sqlalchemy==2.0.35",
    "sse-starlette==2.1.3",
    "structlog==24.4.0",
    "uvicorn[standard]==0.30.6",
]
